--- a/register.html
+++ b/register.html
@@ -65,7 +65,7 @@
         </form>
 
         <!--Button to clear local storage for debugging purposes-->
-        <button id='clearLocal'>Clear Local Storage</button>
+        <button id='clearLocal'>Clear Local Storage and Log Out current user</button>
 
       </div>
       
