updated nav bar and removed about page

--- a/Profile.html
+++ b/Profile.html
@@ -30,6 +30,10 @@
                     <ul class="uk-navbar-nav">
                         <li class="uk-active nav-item">
                             <a href="homePage.html">wknd.</a>
+                        </li>
+                        <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
+                        <!-- <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li>\ -->
+                        <li class="uk-active nav-item"><a id='user' href="#">@username</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
@@ -37,9 +41,6 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
-                        <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li>\
-                        <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
                     </ul>
                 </div>
             </nav>
