--- a/register.html
+++ b/register.html
@@ -20,16 +20,17 @@
               <ul class="uk-navbar-nav">
                   <li class="uk-active nav-item">
                       <a href="homePage.html">wknd.</a>
-                      <div class="uk-navbar-dropdown">
-                          <ul class="uk-nav uk-navbar-dropdown-nav">
-                              <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
-                              <li class="uk-active nav-item"><a href="login.html">LOGIN</a></li>
-                          </ul>
-                      </div>
                   </li>
                   <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
-                  <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li>
-                  <li class="uk-active nav-item"><a id='user' href="Profile.html">@username</a></li>
+                  <!-- <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li> -->
+                  <li class="uk-active nav-item"><a id='user' href="Profile.html">@username</a>
+                    <div class="uk-navbar-dropdown">
+                      <ul class="uk-nav uk-navbar-dropdown-nav">
+                          <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
+                          <li class="uk-active nav-item"><a href="login.html">LOGIN</a></li>
+                      </ul>
+                  </div>
+                  </li>
               </ul>
           </div>
       </nav>
