--- a/homePage.html
+++ b/homePage.html
@@ -21,8 +21,10 @@
             <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
                 <div class="uk-navbar-right uk-light">
                     <ul class="uk-navbar-nav">
-                        <li class="uk-active nav-item">
-                            <a href="homePage.html">wknd.</a>
+                        <li class="uk-active nav-item"><a href="homePage.html">wknd.</a></li>
+                        <li class="uk-active nav-item navbar"><a href="search_bar.html">FIND</a></li>
+                        <!-- <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li> -->
+                        <li class="uk-active nav-item"><a id='user' href="profile.html">@username</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
@@ -30,9 +32,6 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
-                        <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li>
-                        <li class="uk-active nav-item"><a id='user' href="profile.html">@username</a></li>
                     </ul>
                 </div>
             </nav>
