--- a/search_bar.html
+++ b/search_bar.html
@@ -30,16 +30,17 @@
                     <ul class="uk-navbar-nav">
                         <li class="uk-active nav-item">
                             <a href="homePage.html">wknd.</a>
+                        </li>
+                        <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li> 
+                         <!-- <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li> -->
+                        <li class="uk-active nav-item"><a id='user' href="profile.html">@username</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
-                                   <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
+                                    <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
                                     <li class="uk-active nav-item"><a href="login.html">LOGIN</a></li>
                                 </ul>
                             </div>
                         </li>
-                        <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li> 
-                         <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li>
-                        <li class="uk-active nav-item"><a id='user' href="profile.html">@username</a></li>
                     </ul>
                 </div>
             </nav>
