--- a/search_bar.html
+++ b/search_bar.html
@@ -51,8 +51,9 @@
         <!--Search Bar CSS-->
         <form id="searchBar" class="form">
            
+            <!--Search by keyword-->
             <input id='searchEvent' type="search" placeholder="Name of Event">
-            <span uk-search-icon></span>
+            <!--Dropdown box to filter by classification/genre/segment-->
             <select name="dropdown" id="classification">
                 <option value=''>All</option>
                 <option value="Arts & Theatre">Arts & Theatre</option>
@@ -61,11 +62,16 @@
                 <option value='Comedy'>Comedy</option>
                 <option value="Miscellaneous">Misc</option>
               </select>
+
+              <!--Filter by state-->
             <input id='searchState' type='search' placeholder='State (2 letter code)'>
+            <!--Filter by city-->
             <input id='searchCity' type="search" placeholder="City">
-            <label for='startDateTime'>Start after Date / Time</label>
-            <input id='startDateTime' type='datetime-local' placeholder='Start Date / Time'> 
-         <!--   <input id='endDate' type='date' placeholder='End Date'> -->
+          <!--Filter-->
+          <!--  <label for='startDateTime'></label> -->
+            <input id='startDate' type='date' name='startDate' placeholder='Start Date'>
+           <!-- <input id='startTime' type='time' name='startTime'> --> 
+           <input id='endDate' type='date' name='endDate' placeholder='End Date'> 
          <select name='Sort' id='sort'>
              <option value='name,asc'>Name (ascending)</option>
              <option value='name,desc'>Name (descending</option>
