Next and Previous pages!!!!
dissected the object some more to get full results! Added buttons for next and previous pages! Now we actually see everything instead of just like 15 results out of a 100

--- a/search_bar.html
+++ b/search_bar.html
@@ -77,11 +77,15 @@
              <option value='name,desc'>Name (descending</option>
              <option value='date,asc'>Date (ascending)</option>
              <option value='date,desc'>Date (descending)</option>
-             <option value='distance,asc'>Distance</option>
+          <!--   <option value='distance,asc'>Distance</option> -->
             <option value='random'>Randomize</option>
          </select>
             <input type="submit" value="Submit">
         </form>
+
+        <!--Buttons to-->
+        <button id='prevButton' class="uk-button uk-button-primary uk-hide">Previous Page</button>
+        <button id='nextButton' class="uk-button uk-button-primary uk-hide">Next Page</button>
 
 
     <div class="uk-grid-column uk-grid-row uk-card-small uk-child-width-1-3@s uk-text-center" id='searchCards' uk-grid></div>
