--- a/search_bar.html
+++ b/search_bar.html
@@ -83,9 +83,12 @@
             <input type="submit" value="Submit">
         </form>
 
-        <!--Buttons to-->
-        <button id='prevButton' class="uk-button uk-button-primary uk-hide">Previous Page</button>
-        <button id='nextButton' class="uk-button uk-button-primary uk-hide">Next Page</button>
+        <!--Buttons for next and previous pages, start off as hidden-->
+        <button id='prevButton' class="uk-button uk-button-primary hide" style='display:none'>Previous Page</button>
+        <button id='nextButton' class="uk-button uk-button-primary hide" style='display:none'>Next Page</button>
+
+        <h5 id='multi' style='display:none; color:white; background:black;  text-align: center;'>Total results per page: 20</h5>
+        <h5 id='pageCount' style='display:none; color:white; background:black;  text-align: center;'>Total Pages: </h5>
 
 
     <div class="uk-grid-column uk-grid-row uk-card-small uk-child-width-1-3@s uk-text-center" id='searchCards' uk-grid></div>
