--- a/homePage.html
+++ b/homePage.html
@@ -24,7 +24,7 @@
                         <li class="uk-active nav-item"><a href="homePage.html">wknd.</a></li>
                         <li class="uk-active nav-item navbar"><a href="search_bar.html">FIND</a></li>
                         <!-- <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li> -->
-                        <li class="uk-active nav-item"><a id='user' href="profile.html">@username</a>
+                        <li class="uk-active nav-item"><a id='user' href="Profile.html">@username</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
@@ -52,6 +52,10 @@
     {
         console.log(currentUser)
         $('#user').text(currentUser.sn)
+    }
+    else
+    {
+        localStorage.setItem('currentUser', '')
     }
 
 </script>
