--- a/register.html
+++ b/register.html
@@ -66,7 +66,8 @@
         </form>
 
         <!--Button to clear local storage for debugging purposes-->
-        <button id='clearLocal'>Clear Local Storage and Log Out current user</button>
+        <!--FOr debugging only-->
+        <button id='clearLocal' style='display:none'>Clear Local Storage and Log Out current user</button> 
 
       </div>
       
