--- a/login.html
+++ b/login.html
@@ -58,30 +58,17 @@
         <h3 style='color:yellow; background:black;' id='credentialsMsg'>Username and password have to match exactly</h3>
 
 
+        <!--Log out button-->
         <button id ='logout' class='uk-button uk-button-secondary'>Log Out</button>
 
         <!-- placeholder for logout message -->
         <h4 id='logMsg'></h4>
-
-
 
     
 
 
 <script src="js/login.js"></script>
 
-<script>
-/* load the saved User
- var currentUser = JSON.parse(localStorage.getItem('currentUser'))
-
- console.log(currentUser)
-    if(currentUser !== null)
-    {
-        console.log(currentUser)
-        $('#user').text(currentUser.sn)
-    }
-
-    */
 </script>
 
 
