--- a/search_bar.html
+++ b/search_bar.html
@@ -87,7 +87,9 @@
         <button id='prevButton' class="uk-button uk-button-primary hide" style='display:none'>Previous Page</button>
         <button id='nextButton' class="uk-button uk-button-primary hide" style='display:none'>Next Page</button>
 
-        <h5 id='multi' style='display:none; color:white; background:black;  text-align: center;'>Total results per page: 20</h5>
+        <!--<h5 id='multi' style='display:none; color:white; background:black;  text-align: center;'>Total results per page: 20</h5> -->
+
+        <!-- Number of pages in search results-->
         <h5 id='pageCount' style='display:none; color:white; background:black;  text-align: center;'>Total Pages: </h5>
 
 
