--- a/about.html
+++ b/about.html
@@ -1,3 +1,8 @@
+<!--//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+<!-- We decided not to use this page since it wasn't up to our standards yet, maybe in the future we will develop and style this-->
+<!--//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
