--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
         <label for='City'>City</label>
         <input type='text' id='city' name='city' required>
 
-        <label for='State'>State</label>
+        <label for='State'>State (2 letter code)</label>
         <input type='text' id='state' name='state' required>
         
         <!--Username input-->
