fixing search bugs
state should have been stateCode

--- a/search_bar.html
+++ b/search_bar.html
@@ -33,7 +33,7 @@
                         </li>
                         <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li> 
                          <!-- <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li> -->
-                        <li class="uk-active nav-item"><a id='user' href="profile.html">@username</a>
+                        <li class="uk-active nav-item"><a id='user' href="Profile.html">@username</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
@@ -106,7 +106,6 @@
     
 <!--Search Function-->
     <script src="js/searchBarFunction.js"></script>
-
 
 
 </body>
