--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                         </li>
                         <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
                         <!-- <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li> -->
-                        <li class="uk-active nav-item"><a id='user' href="Profile.html">@username</a></li>
+                        <li class="uk-active nav-item"><a id='user' href="Profile.html">@username</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
